another try at apps

--- a/apps/development/kevintest-values.yaml
+++ b/apps/development/kevintest-values.yaml
@@ -4,6 +4,8 @@ metadata:
   name: kevintest
   namespace: development
 spec:
+  metadata:
+      namespace: development
   chart:
     spec:
       version: "1.0.0"
