--- a/apps/base/kevintest/repository.yaml
+++ b/apps/base/kevintest/repository.yaml
@@ -5,4 +5,4 @@ metadata:
   namespace: development
 spec:
   interval: 5m
-  url: oci://483817578804.dkr.ecr.us-east-2.amazonaws.com/
+  url: oci://483817578804.dkr.ecr.us-east-2.amazonaws.com/xplat-service
