--- a/apps/base/kevintest/repository.yaml
+++ b/apps/base/kevintest/repository.yaml
@@ -6,4 +6,4 @@ metadata:
 spec:
   type: oci
   interval: 5m
-  url: oci://483817578804.dkr.ecr.us-east-2.amazonaws.com/xplat-service
+  url: oci://483817578804.dkr.ecr.us-east-2.amazonaws.com/
