another try at apps

--- a/apps/base/kevintest/repository.yaml
+++ b/apps/base/kevintest/repository.yaml
@@ -4,6 +4,7 @@ metadata:
   name: xplat-helm-repo
   namespace: development
 spec:
+  provider: aws
   type: oci
   interval: 5m
-  url: oci://483817578804.dkr.ecr.us-east-2.amazonaws.com/
+  url: oci://483817578804.dkr.ecr.us-east-2.amazonaws.com/helm
