--- a/apps/base/platform-test-svc/release.yaml
+++ b/apps/base/platform-test-svc/release.yaml
@@ -10,7 +10,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: xplat-helm-repo
-        snamespace: flux-system
+        namespace: flux-system
   interval: 50m
   install:
     remediation:
