--- a/clusters/sandbox-east/apps.yaml
+++ b/clusters/sandbox-east/apps.yaml
@@ -2,7 +2,7 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: apps
+  name: development
   namespace: flux-system
 spec:
   interval: 10m0s
@@ -10,6 +10,21 @@ spec:
     kind: GitRepository
     name: flux-system
   path: ./apps/development
+  prune: true
+  wait: true
+  timeout: 5m0s
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: qa
+  namespace: flux-system
+spec:
+  interval: 10m0s
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+  path: ./apps/qa
   prune: true
   wait: true
   timeout: 5m0s
