--- a/apps/qa/platform-test-svc-values.yaml
+++ b/apps/qa/platform-test-svc-values.yaml
@@ -2,7 +2,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: platform-test-svc
-  namespace: development
+  namespace: qa
 spec:
   chart:
     spec:
