--- a/apps/platform/development/namespace.yaml
+++ b/apps/platform/development/namespace.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: development
+  name: platform-development
   labels:
     toolkit.fluxcd.io/tenant: dev-team
