--- a/clusters/sandbox-east/apps.yaml
+++ b/clusters/sandbox-east/apps.yaml
@@ -2,14 +2,14 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: development
+  name: platform-development
   namespace: flux-system
 spec:
   interval: 10m0s
   sourceRef:
     kind: GitRepository
     name: flux-system
-  path: ./apps/development
+  path: ./apps/platform/development
   prune: true
   wait: true
   timeout: 5m0s
@@ -17,14 +17,14 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: qa
+  name: platform-qa
   namespace: flux-system
 spec:
   interval: 10m0s
   sourceRef:
     kind: GitRepository
     name: flux-system
-  path: ./apps/qa
+  path: ./apps/platform/qa
   prune: true
   wait: true
   timeout: 5m0s
