--- a/clusters/sandbox-east/slack-alert.yaml
+++ b/clusters/sandbox-east/slack-alert.yaml
@@ -11,5 +11,7 @@ spec:
     name: '*'
   - kind: GitRepository
     name: '*'
+  - kind: HelmRelease
+    name: '*'
   providerRef:
     name: slack
